5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1884_3176.log
== TEST (2019-07-04 18:14:09) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v="a,e,i,o,u"
t=""
for i in string:
	if(i!=v):
		t=t+1
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:14:58) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v="a,e,i,o,u"
for i in string:
	if(i!=v):
		v=v+1
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:15:23) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v="a,e,i,o,u"
for i in string:
	if(i!=v):
	v=v+1
print(sum(v))

-- ERROR:
File "XXXX", line 6
    v=v+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:16:36) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=""
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:15) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=""
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+i
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:39) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=""
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+i
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:19:48) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=""
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:20:08) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:20:23) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
print(sum(v))

-- EXECUTION TIME:
1.20855
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
7
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:20:38) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:23) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	print(sum(v))
else:
	print(sum(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:35) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	print(sum(v))
else:
	print(sum(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:28:48) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	print(sum(v))
else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y")
	a=a+1
	print(sum(a))
	

-- ERROR:
File "XXXX", line 9
    else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:31:30) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+i
	print(sum(v))
else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y")
	a=a+1
	print(sum(a))
	

-- ERROR:
File "XXXX", line 9
    else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:01) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+i
	print(sum(v))
else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
	a=a+1
	print(sum(a))
	

-- ERROR:
File "XXXX", line 9
    else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:46) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+i
else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
	a=a+1
print(sum(v,a))
	

-- ERROR:
File "XXXX", line 8
    else(a!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:04) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+i
else(i!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
	a=a+1
print(sum(v,a))
	

-- ERROR:
File "XXXX", line 8
    else(i!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:34:22) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=1
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
else(i!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
	a=a+1
print(sum(v,a))
	

-- ERROR:
File "XXXX", line 8
    else(i!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:34:34) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=1
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else(i!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
	a=a+1
print(sum(v,a))
	

-- ERROR:
File "XXXX", line 8
    else(i!="b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:35:13) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=1
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else(i!=("b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y")):
	a=a+1
print(sum(v,a))
	

-- ERROR:
File "XXXX", line 8
    else(i!=("b" and "c" and "d" and "f" and "g" and "h" and "j" and "k" and "l" and "m" and "n" and "p" and "q" and "r" and "s" and "t" and "v" and "x" and "z" and "w" and "y")):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:36:04) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=1
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else:
	a=a+1
print(sum(v,a))
	

-- ERROR:
File "XXXX", line 9
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:37:05) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else:
	a=a+0
print(sum-(a))
	

-- ERROR:
File "XXXX", line 9
    a=a+0
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:37:19) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
a=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else:
	a=a+1
print(sum-(a))
	

-- ERROR:
File "XXXX", line 9
    a=a+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:37:35) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else:
print(sum-(a))
	

-- ERROR:
File "XXXX", line 8
    print(sum-(a))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:37:48) 
-- CODE:
from numpy import*
string=input("digite o nome:")
i=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else:
	print(sum-(a))
	

-- ERROR:
File "XXXX", line 8
    print(sum-(a))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:38:16) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else:
	print(sum-(v))
	

-- ERROR:
File "XXXX", line 8
    print(sum-(v))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:38:26) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
	else:
print(sum-(v))
	

-- ERROR:
File "XXXX", line 8
    print(sum-(v))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:38:36) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and "e" and "i" and "o" and "u"):
		v=v+1
else:
print(sum-(v))
	

-- ERROR:
File "XXXX", line 8
    print(sum-(v))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:39:40) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
else:
print(sum-(v))
	

-- ERROR:
File "XXXX", line 8
    print(sum-(v))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:39:47) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:40:27) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=""
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+i
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:40:48) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=""
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:42:07) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:42:30) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
	v=v+1
print(sum-(v))
	

-- ERROR:
File "XXXX", line 6
    v=v+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:42:42) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
	print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:43:37) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:44:04) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(string))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:44:28) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:36) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:52:13) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+i
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:52:35) 
-- CODE:
from numpy import*
string=int("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+i
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:00) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:36) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		i=i+1
print(sum-(i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:54:05) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:58:27) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=""
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+i
print(sum-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:01:44) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(size(string)-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:02:22) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(size(string)-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:02:45) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(size(string)-(v))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:03:04) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(size(string)-v)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:03:24) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(len(string)-v)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:03:38) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(len(string)-v)
	

-- EXECUTION TIME:
0.871906
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:04:05) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(len(string)-v)
print(v)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:04:16) 
-- CODE:
from numpy import*
string=input("digite o nome:")
v=0
for i in string:
	if(i!="a" and i!="e" and i!="i" and i!="o" and i!="u"):
		v=v+1
print(len(string)-v)
print(v)
	

-- EXECUTION TIME:
1.07859
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
3
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
